--- a/package.json
+++ b/package.json
@@ -9,9 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@lottiefiles/lottie-interactivity": "0.1.4",
+    "@lottiefiles/lottie-player": "1.0.3",
+    "@next/bundle-analyzer": "^12.2.5",
+    "@react-spring/parallax": "^9.5.2",
+    "@types/react-lottie": "1.2.5",
+    "@types/throttle-debounce": "2.1.0",
+    "lottie-web": "5.7.8",
     "next": "12.2.5",
+    "prop-types": "15.7.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-lottie": "1.2.3",
+    "throttle": "1.0.3",
+    "throttle-debounce": "3.0.1"
   },
   "devDependencies": {
     "@types/node": "18.7.15",
@@ -19,6 +30,9 @@
     "@types/react-dom": "18.0.6",
     "eslint": "8.23.0",
     "eslint-config-next": "12.2.5",
-    "typescript": "4.8.2"
+    "lottie-web-webpack-loader": "^0.0.5",
+    "typescript": "4.8.2",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0"
   }
 }
